--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
