--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-transition-group": "^1.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0"
   },
   "scripts": {
