--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.15.5",
     "mongoose": "^5.9.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
@@ -21,6 +23,7 @@
     "react-transition-group": "^1.2.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
