--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "firebase": "^7.15.5",
-    "mongoose": "^5.9.5",
+    "firebase": "^7.16.1",
+    "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-transition-group": "^1.2.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "rsuite": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4"
   }
