--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "antd": "^4.5.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "customize-cra": "^1.0.0",
     "d3": "^5.16.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.16.1",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -30,10 +34,10 @@
     "rsuite": "^4.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject",
     "serve": "nodemon server.js"
   },
   "eslintConfig": {
