--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.16.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
