created auth path with passport local authentication strategy; created user method with pre-save middleware for hashing password and compare passwords method

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 FIREBASE_API_KEY=AIzaSyA_r60oD2lnizQpfp8zEJc2GD2QpFdCeM4
 FIREBASE_APP_ID=1:1009474257004:web:2053d39393f91f0d8c1849
+JWT_SECRET=123456poPaertr
 
 
