--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
     "d3": "^5.16.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "firebase": "^7.16.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "moment": "^2.27.0",
-    "mongoose": "^5.9.25",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
@@ -26,7 +22,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-transition-group": "^1.2.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
