--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-FIREBASE_API_KEY=AIzaSyA_r60oD2lnizQpfp8zEJc2GD2QpFdCeM4
-FIREBASE_APP_ID=1:1009474257004:web:2053d39393f91f0d8c1849
-JWT_SECRET=123456poPaertr
-
-
+JWT_SECRET=1242342sfsdfsdf
+SESSION_SECRET=werweorwoeir0wi
+MONGO_URL=mongodb+srv://peter:lOuc7KI4kYAl8BJG@cluster0.qzy0h.mongodb.net/db?retryWrites=true&w=majority
