--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "msw": "^0.21.2",
     "nodemon": "^2.0.4",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4"
